--- a/server/public/stylesheets/termlyplans.css
+++ b/server/public/stylesheets/termlyplans.css
@@ -114,9 +114,11 @@
     margin-bottom: 0.1rem;
 }
 
+.subsection-name-display {
+    margin-top: 1.5rem;
+}
 .es-os-benchmarks-overview-row {
     padding: 0.5rem;
-    margin-top: 0.75rem;
     margin-bottom: 0.75rem;
     background: rgba(250, 250, 250, 0.75);
     border: 1px solid #e3e3e3;
