--- a/server/app/views/planning/termly/termlyPlansSelectOverallCurriculumAreasForTheTerm.scala.html
+++ b/server/app/views/planning/termly/termlyPlansSelectOverallCurriculumAreasForTheTerm.scala.html
@@ -38,7 +38,7 @@
             <h5>Please select the curriculum areas you wish to plan for this term</h5>
         </div>
 
-        <div class="alert alert-info alert-dismissible fade show " role="alert" >
+        <div id="es-and-os-alert" class="alert alert-danger alert-dismissible fade show" role="alert" >
             <div >
                 <p>
                     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
@@ -47,13 +47,15 @@
                     <strong>Note:</strong>
                     Areas where Es And Os are currently available for testing are :-
             <ul>
-                <li>Art</li>
-                <li>Drama</li>
-                <li>Music</li>
-                <li>Reading - Early,First & Second levels</li>
-                <li>Maths</li>
+                <strong><li>Art</li></strong>
+                <strong><li>Drama</li></strong>
+                <strong><li>Music</li></strong>
+                <strong><li>Reading - Early,First & Second levels</li></strong>
+                <strong><li>Maths</li></strong>
             </ul>
                 </p>
+
+                <p>Please only select these for now until the rest are populated</p>
             </div>
         </div>
 
@@ -282,5 +284,14 @@
 
     </div>
 
+
+    <script>
+            $(function () {
+                $('#es-and-os-alert').alert()
+            });
+    </script>
+
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" crossorigin="anonymous"></script>
+    @scalajs.html.scripts("client", routes.Assets.versioned(_).toString, name => getClass.getResource(s"/public/$name") != null)
 }
