--- a/server/public/stylesheets/classes.css
+++ b/server/public/stylesheets/classes.css
@@ -6,7 +6,7 @@
 
 #addNewClassBtn {
     /*margin-left: 1rem;*/
-    /*margin-top: 1rem;*/
+    margin-top: 1rem;
     /*margin-bottom: 1.5rem;*/
 }
 
