--- a/server/app/views/planning/classtimetables/classesHome.scala.html
+++ b/server/app/views/planning/classtimetables/classesHome.scala.html
@@ -80,7 +80,11 @@
                          <div class="row">
                           <div class="mx-auto">
                            <div class="col-sm-12 col-md-10 col-xl-8">
-                            <button class="rounded btn btn-outline-info teachers-classes-btn teachers-classes-goto-btn" data-class-id="@classDetail.id.id" role="button">Class Setup</button>
+                            <button class="rounded btn btn-outline-info teachers-classes-btn teachers-classes-goto-btn"
+                            data-class-id="@classDetail.id.id" role="button"
+                            tabindex="0" data-toggle="popover" data-trigger="focus" data-placement="right"
+                            title="Next" data-content="Click here to manage your class"
+                            >Go To Class</button>
                            </div>
                           </div>
                          </div>
@@ -108,6 +112,14 @@
     </div>
  </div>
 
+    <script>
+            $(function () {
+                $('[data-toggle="tooltip"]').tooltip();
+            });
+            $(function () {
+                $('[data-toggle="popover"]').popover();
+            });
+    </script>
 
  @scalajs.html.scripts("client", routes.Assets.versioned(_).toString, name => getClass.getResource(s"/public/$name") != null)
 }
