--- a/server/app/views/planning/classtimetables/manageClass.scala.html
+++ b/server/app/views/planning/classtimetables/manageClass.scala.html
@@ -135,7 +135,9 @@
                         }
                         </div>
                         <div>
-                            <button id="add-new-maths-groups-button" type="button" class="btn btn-sm btn-success add-new-class-button">
+                            <button id="add-new-maths-groups-button" type="button" class="btn btn-sm btn-success add-new-class-button"
+                                tabindex="0" data-toggle="popover" data-trigger="focus" data-placement="right"
+                                title="Create A New Maths Group" data-content="Just click here">
                                 Add New Maths Group</button>
                         </div>
                     </div>
@@ -221,7 +223,9 @@
                         }
                         </div>
                         <div>
-                            <button id="add-new-reading-groups-button" type="button" class="btn btn-sm btn-success add-new-class-button">
+                            <button id="add-new-reading-groups-button" type="button" class="btn btn-sm btn-success add-new-class-button"
+                            tabindex="0" data-toggle="popover" data-trigger="focus" data-placement="top"
+                            title="... a new Reading group" data-content="Just click here">
                                 Add New Reading Group</button>
                         </div>
                     </div>
@@ -342,7 +346,9 @@
                         }
                         </div>
                         <div>
-                            <button id="add-new-writing-groups-button" type="button" class="btn btn-sm btn-success add-new-class-button">
+                            <button id="add-new-writing-groups-button" type="button" class="btn btn-sm btn-success add-new-class-button"
+                            tabindex="0" data-toggle="popover" data-trigger="focus" data-placement="right"
+                            title="and a new Writing Group" data-content="Just here">
                                 Add New Writing Group</button>
                         </div>
                     </div>
@@ -524,6 +530,15 @@
     <script>
             localStorage.setItem("timeToTeachUserId", "@{tttUserId.value}");
             localStorage.setItem("classId", "@{classDetails.id.id}");
+    </script>
+
+    <script>
+            $(function () {
+                $('[data-toggle="tooltip"]').tooltip();
+            });
+            $(function () {
+                $('[data-toggle="popover"]').popover();
+            });
     </script>
 
     @scalajs.html.scripts("client", routes.Assets.versioned(_).toString, name => getClass.getResource(s"/public/$name") != null)
