--- a/server/app/views/timetoteachDashboard.scala.html
+++ b/server/app/views/timetoteachDashboard.scala.html
@@ -46,10 +46,16 @@
             <div class="row">
                 <div class="col-md-5 dashboardFadedBackground text-center">
                     <h3 class="display-5 text-center">Planning</h3>
-                    <a class="btn btn-primary btn-lg dashboard-button" href="@controllers.planning.classtimetable.routes.ClassTimetableController.classesHome()" role="button">
+                    <a class="btn btn-primary btn-lg dashboard-button" href="@controllers.planning.classtimetable.routes.ClassTimetableController.classesHome()" role="button"
+                    tabindex="0" data-toggle="popover" data-trigger="focus" data-placement="right"
+                    title="Step 1" data-content="First thing to try is creating a new class, add some groups & create a timetable">
                         Classes Home</a>
-                    <a class="btn btn-info btn-lg dashboard-button" href="@controllers.planning.termly.routes.TermlyPlansController.termlyPlans()" role="button">
+
+                    <a class="btn btn-info btn-lg dashboard-button" href="@controllers.planning.termly.routes.TermlyPlansController.termlyPlans()" role="button"
+                    tabindex="0" data-toggle="popover" data-trigger="focus" data-placement="bottom"
+                    title="Step 2" data-content="Then, you can select a few Es & Os plus benchmarks .... then generate a PDF version of your plan!">
                         Termly Plans</a>
+
                     <button type="button" disabled="true" class="btn btn-dark btn-lg dashboard-button">Weekly Plans</button>
                 </div>
                 <div class="col-md-1">
@@ -86,4 +92,15 @@
             </div>
         </div>
     </section>
+
+    <script>
+            $(function () {
+                $('[data-toggle="tooltip"]').tooltip();
+            });
+            $(function () {
+                $('[data-toggle="popover"]').popover();
+            });
+    </script>
+
+    @scalajs.html.scripts("client", routes.Assets.versioned(_).toString, name => getClass.getResource(s"/public/$name") != null)
 }
